...
  <string name="add_profile_error_image_failed_store">We failed to store your avatar image. Please try again.</string>
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a valid name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Please choose a profile name that doesn\'t include numbers or symbols.</string>
  <string name="add_profile_error_missing_profile_type">Profile type unknown.</string>
  <string name="add_profile_default_error_message">An error occurred while creating a profile.</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="add_profile_info_content_description">More information on 3-digit PINs.</string>
  <string name="current_profile_picture_content_description">Current profile picture</string>
  <string name="edit_profile_picture_content_description">Edit profile picture</string>
  <!-- OnboardingActivity -->
  <string name="onboarding_slide_0_title">Welcome to %s!</string>
...
  <string name="onboarding_slide_3_description">Enjoy your learning adventures with our free, effective lessons.</string>
  <string name="skip">Skip</string>
  <string name="next_arrow">Next</string>
  <string name="get_started">Get Started</string>
  <string name="onboarding_slide_dots_content_description">Slide %1$s of %2$s</string>
  <!-- PinPasswordActivity -->
  <string name="pin_password_activity_title">PIN verification</string>
  <string name="pin_password_hello">Hi, %s!</string>
  <string name="pin_password_admin_enter">Please enter your Administrator PIN.</string>
  <string name="pin_password_user_enter">Please enter your PIN.</string>
  <string name="input_pin_password_as_admin">Administrator’s 5-Digit PIN.</string>
  <string name="input_pin_password_as_user">User’s 3-Digit PIN.</string>
  <string name="pin_password_forgot_pin">Forgot PIN?</string>
  <string name="pin_password_incorrect_pin">Incorrect PIN.</string>
  <string name="pin_password_show">show</string>
  <string name="pin_password_hide">hide</string>
  <string name="pin_password_close">Close</string>
  <string name="pin_password_success">PIN change is successful</string>
  <string name="pin_password_forgot_title">Forgot PIN?</string>
  <string name="admin_forgot_pin_message">To reset your PIN, you\'ll need to clear all saved data for %s.\n\nKeep in mind that this action will cause all profiles and user progress to be deleted, and it cannot be undone. Also, the app will close when this completes and will need to be reopened.</string>
  <string name="admin_forgot_pin_reset_app_data_button_text">Reset %s Data</string>
  <string name="admin_confirm_app_wipe_title">Confirm %s Data Reset</string>
  <string name="admin_confirm_app_wipe_message">Are you sure that you want to delete all %s profiles on this device? This operation cannot be undone.</string>
...
  <string name="pin_password_toolbar_title">Enter PIN</string>
  <!-- AdminSettingsDialogFragment -->
  <string name="admin_settings_label">Administrator\'s PIN</string>
  <string name="admin_settings_heading">Access to Administrator Settings</string>
  <string name="admin_settings_sub">Administrator\'s PIN required to change user\'s PIN</string>
  <string name="admin_settings_cancel">Cancel</string>
  <string name="admin_settings_submit">Submit</string>
  <string name="admin_settings_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_settings_enter_user_new_pin">%1$s\'s New PIN.</string>
  <!-- ResetPinDialogFragment -->
  <string name="reset_pin_enter">Enter a New Pin</string>
  <string name="reset_pin_enter_dialog_message">This PIN will be %s\'s new PIN and will be required when signing in.</string>
  <!-- MyDownloadsActivity -->
  <string name="my_downloads_activity_title">My Downloads</string>
...
