...
          android:layout_marginTop="24dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/enter_text_view">

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pin_password_input_pin"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@{viewModel.profile.isAdmin ? @string/input_pin_password_as_admin : @string/input_pin_password_as_user}"
            android:minHeight="56dp"
            app:errorMessage="@{viewModel.errorMessage}"
            app:layout_constraintEnd_toStartOf="@id/show_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/pin_password_input_pin_edit_text"
              style="@style/TextInputEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionNext"
              android:inputType="numberPassword"
              android:maxLength="@{viewModel.profile.pin.length()}"
              android:textSize="14sp" />
          </com.google.android.material.textfield.TextInputLayout>

          <TextView
            android:id="@+id/forgot_pin"
            style="@style/Heading5ViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:paddingTop="8dp"
...
