...
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/reset_pin_input_pin"
      style="@style/TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="20dp"
      android:hint="@{viewModel.resetPinInputPinHintText}"
      app:errorMessage="@{viewModel.errorMessage}">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reset_pin_input_pin_edit_text"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:maxLength="3"
...
