...

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_settings_input_pin"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/admin_settings_label"
        app:errorMessage="@{viewModel.errorMessage}">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/admin_settings_input_pin_edit_text"
          style="@style/TextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionDone"
          android:inputType="numberPassword"
          android:maxLength="5"
...
